# twai-swarm

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pytest.ini  requirements.txt
app/: activities.py  api.py  auth.py  bootstrap_db.py  config.py  db.py  embeddings.py  github_app.py  github_webhook.py  observability.py  repo_query.py  router.py  telemetry.py  tenant.py  worker.py
bench/: semantic_search.py
db/: init.sql
scripts/: backfill_embeddings.py  bootstrap_db.ps1  salvage_coder_output.py  seed_langfuse_models.ps1  seed_langfuse_models.py  smoke_coder.py  smoke_models.py  smoke_temporal.py  sync_template.sh
templates/: README.md
templates/python-fastapi-postgres/scaffold/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
templates/python-fastapi-postgres/scaffold/.github/workflows/: ci.yml
templates/python-fastapi-postgres/scaffold/app/: __init__.py  config.py  db.py  main.py  models.py
templates/python-fastapi-postgres/scaffold/app/api/: health.py  routes.py
templates/python-fastapi-postgres/scaffold/migrations/: env.py
templates/python-fastapi-postgres/scaffold/tests/: conftest.py  test_items.py  test_smoke.py
tests/: conftest.py  test_api_helpers.py  test_architect_repo.py  test_coder_loop.py  test_coder_repo.py  test_coder_sandbox.py  test_coder_tools.py  test_critic_repo.py  test_documenter_repo.py  test_embeddings.py  test_extractor_cpp.py  test_extractor_java.py  test_github_app.py  test_github_webhook.py  test_heuristics.py  (+31 more)
(+162 files in other folders)
